@@ -1,0 +1,4 @@
+EXTRA_DIST = \
+	html/index.html \
+	html/default.css \
+	html/sflogo.png 
